--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "gray-matter": "^4.0.3",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
